--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -1,10 +1,13 @@
 .changeButton {
     width: 100px;
     height: 100px;
-    border: 1px solid black;
     display: flex;
     align-items: center;
     justify-content: center;
+    margin: 5px;
+    background-color: rgb(252, 250, 252);
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgb(255, 255, 254);
 }
 
 .changeButton img {
